--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --cache",
-    "lint-fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix"
+    "lint-fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint-styling": "npx stylelint \"**/*.{css,scss}\" --max-warnings=0"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -28,6 +29,9 @@
     "sass": "^1.83.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "stylelint-config-standard-scss": "11.1.0",
+    "stylelint-declaration-strict-value": "1.9.2",
+    "stylelint-order": "^6.0.4"
   }
 }
