--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-unicorn": "51.0.1",
     "globals": "^15.14.0",
     "sass": "^1.83.0",
+    "husky": "^9.0.11",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.5",
