feat(global): add commit validation

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,9 +5,10 @@
     "strict": true,
     "esModuleInterop": true,
     "composite": true,
+    "baseUrl": "./",
     "paths": {
       "*": ["src/*"]
     },
   },
-  "include": ["src/**/*.ts", "src/**/*.json"]
+  "include": ["src/**/*.ts", "src/**/*.json", ".eslintrc.js"]
 }
