--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "lint": "eslint . --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts}\" --max-warnings=0 --cache",
+    "lint-fix": "eslint \"**/*.{js,ts}\" --fix",
     "start": "ts-node-dev --project ./tsconfig.json -r tsconfig-paths/register src/server.ts"
   }
 }
