--- a/frontend/.stylelintrc.json
+++ b/frontend/.stylelintrc.json
@@ -2,9 +2,28 @@
   "extends": "stylelint-config-standard-scss",
   "plugins": [
     "stylelint-declaration-strict-value",
+    "./.stylelint/snapshot-v14.16.1",
     "stylelint-order"
   ],
   "rules": {
+    "snapshot-v14.16.1/indentation": 4,
+    "snapshot-v14.16.1/no-empty-first-line": true,
+    "snapshot-v14.16.1/no-eol-whitespace": true,
+    "snapshot-v14.16.1/no-extra-semicolons": true,
+    "snapshot-v14.16.1/max-empty-lines": 1,
+    "snapshot-v14.16.1/string-quotes": "double",
+    "snapshot-v14.16.1/value-list-comma-space-after": "always",
+    "snapshot-v14.16.1/value-list-max-empty-lines": 0,
+    "snapshot-v14.16.1/declaration-colon-space-before": "never",
+    "snapshot-v14.16.1/declaration-colon-space-after": "always",
+    "snapshot-v14.16.1/declaration-colon-newline-after": "always-multi-line",
+    "snapshot-v14.16.1/declaration-block-trailing-semicolon": "always",
+    "snapshot-v14.16.1/block-closing-brace-newline-after": "always",
+    "snapshot-v14.16.1/selector-attribute-brackets-space-inside": "never",
+    "snapshot-v14.16.1/selector-attribute-brackets-space-before": "never",
+    "snapshot-v14.16.1/selector-attribute-brackets-space-after": "never",
+    "snapshot-v14.16.1/number-leading-zero": "always",
+    "snapshot-v14.16.1/selector-max-empty-lines": 0,
     "selector-class-pattern": null,
     "shorthand-property-no-redundant-values": null,
     "media-feature-range-notation": null,
@@ -89,6 +108,7 @@
       "border-left",
       "background-color",
       "background",
+      "background-image",
       "box-shadow",
       "transition",
       "transform",
