--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-authentication",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -10,7 +9,8 @@
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --cache",
     "lint-fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
     "lint-styling": "npx stylelint \"**/*.{css,scss}\" --max-warnings=0",
-    "prepare": "husky"
+    "prepare": "husky install",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -29,13 +29,14 @@
     "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-unicorn": "51.0.1",
     "globals": "^15.14.0",
-    "sass": "^1.83.0",
     "husky": "^9.0.11",
+    "sass": "^1.83.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-declaration-strict-value": "1.9.2",
+    "stylelint-order": "^6.0.4",
+    "stylelint-snapshot-14.16.1": "npm:stylelint@14.16.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.5",
-    "stylelint-config-standard-scss": "11.1.0",
-    "stylelint-declaration-strict-value": "1.9.2",
-    "stylelint-order": "^6.0.4"
+    "vite": "^6.0.5"
   }
 }
