--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": ["tsconfig.json"],
     "sourceType": "module",
@@ -9,6 +14,7 @@
   },
   "plugins": ["simple-import-sort", "unicorn", "eslint-plugin-css-modules"],
   "rules": {
+    "react/react-in-jsx-scope": "off",
     "css-modules/no-unused-class": "warn",
     "unicorn/filename-case": [
       "error",
