--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "8.57.0",
     "eslint-plugin-css-modules": "2.12.0",
     "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-simple-import-sort": "12.0.0",
     "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-unicorn": "51.0.1",
