chore(frontend): extend app config

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,6 +12,9 @@
       "jsx": true
     }
   },
+  "env": {
+    "browser": true
+  },
   "plugins": ["simple-import-sort", "unicorn", "eslint-plugin-css-modules"],
   "rules": {
     "react/react-in-jsx-scope": "off",
