--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "stylelint-snapshot-14.16.1": "npm:stylelint@14.16.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
