--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-unicorn": "51.0.1",
     "globals": "^15.14.0",
     "husky": "^9.0.11",
+    "jwt-decode": "^4.0.0",
     "sass": "^1.83.0",
     "stylelint-config-standard-scss": "^11.1.0",
     "stylelint-declaration-strict-value": "1.9.2",
