--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-css-modules": "2.12.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "12.0.0",
     "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-unicorn": "51.0.1",
