--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -65,6 +65,12 @@
       "rules": {
         "unicorn/filename-case": "off"
       }
+    },
+    {
+      "files": ["**/*.ts"],
+      "rules": {
+        "no-unused-vars": "off"
+      }
     }
   ]
 }
