--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test": "vitest",
     "preview": "vite preview",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --cache",
     "lint-fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
@@ -21,6 +22,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/parser": "^7.0.0",
@@ -35,15 +39,17 @@
     "eslint-plugin-unicorn": "51.0.1",
     "globals": "^15.14.0",
     "husky": "^9.0.11",
+    "jsdom": "^26.0.0",
     "jwt-decode": "^4.0.0",
     "sass": "^1.83.0",
     "stylelint-config-standard-scss": "^11.1.0",
     "stylelint-declaration-strict-value": "1.9.2",
     "stylelint-order": "^6.0.4",
     "stylelint-snapshot-14.16.1": "npm:stylelint@14.16.1",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.6"
   }
 }
