feat(frontend): add authentication component test & enable globals in eslint + small adjustments

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -15,6 +15,12 @@
   "env": {
     "browser": true
   },
+  "globals": {
+    "vi": "readonly",
+    "it": "readonly",
+    "expect": "readonly",
+    "describe": "readonly"
+  },
   "plugins": [
     "simple-import-sort",
     "unicorn",
