chore(frontend): remove globally available vitest imports and adjust eslint config

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -19,7 +19,10 @@
     "vi": "readonly",
     "it": "readonly",
     "expect": "readonly",
-    "describe": "readonly"
+    "describe": "readonly",
+    "beforeEach": "readonly",
+    "afterEach": "readonly",
+    "beforeAll": "readonly"
   },
   "plugins": [
     "simple-import-sort",
