fix(backend): fix global express typing

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,8 @@
     "paths": {
       "*": ["src/*"]
     },
+    // Tells TypeScript where to look for global type declarations
+    "typeRoots": ["src/types"]
   },
-  "include": ["src/**/*.ts", "src/**/*.json", ".eslintrc.js"]
+  "include": ["src/**/*.ts", "src/**/*.json", ".eslintrc.js"],
 }
