refactor(backend): add zod and new folder structure

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "resolveJsonModule": true,
-    "target": "es5",
+    "moduleResolution": "node", 
+    "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
     "composite": true,
@@ -10,7 +10,7 @@
       "*": ["src/*"]
     },
     // Tells TypeScript where to look for global type declarations
-    "typeRoots": ["src/types"]
+    "typeRoots": ["src/global.d.ts"]
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".eslintrc.js"],
 }
