--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
