--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@types/bcrypt": "^5.0.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
