--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "lint-fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
     "lint-styling": "npx stylelint \"**/*.{css,scss}\" --max-warnings=0",
     "prepare": "husky install",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generate-types": "orval --config orval.config.ts"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -41,6 +42,7 @@
     "husky": "^9.0.11",
     "jsdom": "^26.0.0",
     "jwt-decode": "^4.0.0",
+    "orval": "6.29.1",
     "sass": "^1.83.0",
     "stylelint-config-standard-scss": "^11.1.0",
     "stylelint-declaration-strict-value": "1.9.2",
