--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "zod": "^3.25.67",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
