--- a/backend/package.json
+++ b/backend/package.json
@@ -1,36 +1,40 @@
 {
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.5",
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
-    "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.52.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.3.0",
-    "@types/bcrypt": "^5.0.1",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "zod": "^3.24.2"
-  },
-  "scripts": {
-    "type-check": "tsc --noEmit",
-    "lint": "eslint \"**/*.{js,ts}\" --max-warnings=0 --cache",
-    "lint-fix": "eslint \"**/*.{js,ts}\" --fix",
-    "start": "ts-node-dev --project ./tsconfig.json -r tsconfig-paths/register src/server.ts"
-  }
+    "type": "module",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.1",
+        "@types/cookie-parser": "^1.4.5",
+        "@types/cors": "^2.8.15",
+        "@types/express": "^4.17.20",
+        "@types/jsonwebtoken": "^9.0.4",
+        "@types/node": "^20.8.7",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
+        "eslint": "^8.52.0",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.2.2",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.2.4"
+    },
+     "dependencies": {
+        "@asteasolutions/zod-to-openapi": "^7.3.0",
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.4.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.10.0",
+        "zod": "^3.24.2"
+    },
+    "scripts": {
+        "type-check": "tsc --noEmit",
+        "lint": "eslint \"**/*.{js,ts}\" --max-warnings=0 --cache",
+        "lint-fix": "eslint \"**/*.{js,ts}\" --fix",
+        "start": "ts-node-dev --project ./tsconfig.json -r tsconfig-paths/register src/server.ts",
+        "test": "vitest"
+    }
 }
