--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -14,7 +14,7 @@
             "warn",
             {
                 "groups": [
-                    ["bcrypt|cookie-parser|cors|dotenv|express|http|jsonwebtoken|mongodb|sanitize-html|uuid|vitest|zod"],
+                    ["bcrypt|cookie-parser|cors|dotenv|express|http|jsonwebtoken|mongodb|node-cron|sanitize-html|uuid|vitest|zod"],
                     ["^modules\/.+$"],
                     ["^(api|aop|lib)(\/.+)?$"],
                     ["middleware|controller"],
