--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.4"
     },
-     "dependencies": {
+    "dependencies": {
         "@asteasolutions/zod-to-openapi": "^7.3.0",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
@@ -27,6 +27,7 @@
         "express-rate-limit": "^7.4.1",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.10.0",
+        "node-cron": "^4.2.1",
         "zod": "^3.24.2"
     },
     "scripts": {
