--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crawlee": "^3.15.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.4.1",
