--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crawlee": "^3.15.2",
+        "cron-parser": "^5.5.0",
         "dotenv": "^16.3.1",
         "express": "^5.2.1",
         "express-rate-limit": "^7.4.1",
